# brainboost

./: .env  .gitignore  Landing.css  Landing.html  README.md  docker-compose.yml  dockerfile  login.html  main.py  nicepage.css  package-lock.json  readme.md  register.html  requirements.txt  users.db
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/back/: pyvenv.cfg
backend/back/Scripts/: activate  activate.bat
backend/brainboost/: main.py
backend/models/: database.py  models.py
backend/routes/: user_answer_routes.py  user_routes.py  user_videos.py
backend/schemas/: answer_schemas.py  user_video_score.py  video_schemas.py
backend/services/: auth.py  user_answer.py  video.py
backend2/: Dockerfile  pyproject.toml
backend2/back/: pyvenv.cfg
backend2/routes/: user_answer_routes.py  user_videos.py  video_routes.py
backend2/schemas/: user_schemas.py  user_video_score.py
backend2/services/: user_answer.py  video.py
frontend/: Dockerfile  Landing.html  package-lock.json  package.json  perguntas.html  register.html  script.js  tailwind.config.js  tsconfig.json
frontend/services/: userServices.ts  videoService.ts
mobile/: README.md  babel.config.js  eslint.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
models/: models.py
my-project/: package-lock.json  package.json
routes/: user_answer_routes.py  user_routes.py  video_routes.py  videos_routes.py
schemas/: answer_schemas.py  user_schemas.py  video_schemas.py
services/: auth.py  user_answer.py  video.py
styles/: Landing.css  Login.css  Perguntas.css
(+74 files in other folders)
